# AT1-Kaggle-Competition-Group-12

./: li_yeeting-24866954-week1_logisticregression.ipynb  pyproject.toml
notebooks/: li_yeeting-24866954-week1_logisticregression.ipynb  li_yeeting-24866954-week2_2randomforest_featureeng.ipynb  li_yeeting-24866954-week2_4randomforest-fillna_median-featureeng.ipynb  li_yeeting-24866954-week2_randomforest_featureeng.ipynb  li_yeeting-24866954-week3_1GradientBoosting.ipynb  li_yeeting-24866954-week3_2GB_featureeng.ipynb  li_yeeting-24866954-week3_xgboost_1.ipynb  li_yeeting-24866954-week3_xgboost_2_featureeng.ipynb  li_yeeting-24866954-week3_xgboost_3_hyperparaCV.ipynb  li_yeeting-24866954-week3_xgboost_4_hyperparaCV_featureeng.ipynb  li_yeeting-24866954-week3_xgboost_5_fillna_median_diff_hyper.ipynb  li_yeeting-24866954-week3_xgboost_6_height_adjust_per.ipynb  li_yeeting-24866954-week3_xgboost_7_featureeng.ipynb  li_yeeting-24866954-week3_xgboost_8_featureeng_diff_para.ipynb  li_yeeting-24866954-week3_xgboost_9_diff_feature_para_USING PACKAGE.ipynb  week2_randomforest.ipynb
notebooks/week 1/: li_yeeting-24866954-week1_logisticregression.ipynb
notebooks/week 2/: li_yeeting-24866954-week2_1randomforest.ipynb  li_yeeting-24866954-week2_3randomforest-fillna_median.ipynb
