[tool.poetry]
name = "yeetingli"
version = "0.1.0"
description = ""
authors = ["Yee Ting Li <yeeting.li@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
pandas = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
